@@ -39,6 +39,52 @@
 #import <iTerm/PTYTask.h>
 #import <iTerm/PreferencePanel.h>
 
+#include <dlfcn.h>
+#include <sys/mount.h>
+/* Definition stolen from libproc.h */
+#define PROC_PIDVNODEPATHINFO 9
+//int proc_pidinfo(pid_t pid, int flavor, uint64_t arg,  void *buffer, int buffersize);
+
+struct vinfo_stat {
+	uint32_t	vst_dev;	/* [XSI] ID of device containing file */
+	uint16_t	vst_mode;	/* [XSI] Mode of file (see below) */
+	uint16_t	vst_nlink;	/* [XSI] Number of hard links */
+	uint64_t	vst_ino;	/* [XSI] File serial number */
+	uid_t		vst_uid;	/* [XSI] User ID of the file */
+	gid_t		vst_gid;	/* [XSI] Group ID of the file */
+	int64_t		vst_atime;	/* [XSI] Time of last access */
+	int64_t		vst_atimensec;	/* nsec of last access */
+	int64_t		vst_mtime;	/* [XSI] Last data modification time */
+	int64_t		vst_mtimensec;	/* last data modification nsec */
+	int64_t		vst_ctime;	/* [XSI] Time of last status change */
+	int64_t		vst_ctimensec;	/* nsec of last status change */
+	int64_t		vst_birthtime;	/*  File creation time(birth)  */
+	int64_t		vst_birthtimensec;	/* nsec of File creation time */
+	off_t		vst_size;	/* [XSI] file size, in bytes */
+	int64_t		vst_blocks;	/* [XSI] blocks allocated for file */
+	int32_t		vst_blksize;	/* [XSI] optimal blocksize for I/O */
+	uint32_t	vst_flags;	/* user defined flags for file */
+	uint32_t	vst_gen;	/* file generation number */
+	uint32_t	vst_rdev;	/* [XSI] Device ID */
+	int64_t		vst_qspare[2];	/* RESERVED: DO NOT USE! */
+};
+
+struct vnode_info {
+	struct vinfo_stat	vi_stat;
+	int			vi_type;
+	fsid_t			vi_fsid;
+	int			vi_pad;
+};
+
+struct vnode_info_path {
+	struct vnode_info	vip_vi;
+	char vip_path[MAXPATHLEN];  /* tail end of it  */
+};
+
+struct proc_vnodepathinfo {
+	struct vnode_info_path pvi_cdir;
+	struct vnode_info_path pvi_rdir;
+};
 
 @implementation PTYTask
 
@@ -425,6 +471,43 @@ static void setup_tty_param(
 - (NSString *)description
 {
     return [NSString stringWithFormat:@"PTYTask(pid %d, fildes %d)", PID, FILDES];
+}
+
+- (NSString *)getWorkingDirectory
+{
+    static int loadedAttempted = 0;
+    static int(*proc_pidinfo)(pid_t pid, int flavor, uint64_t arg,  void *buffer, int buffersize) = NULL;
+    if (!proc_pidinfo) {
+        if (loadedAttempted) {
+            /* Hmm, we can't find the symbols that we need... so lets not try */
+            return nil;
+        }
+        loadedAttempted = 1;
+
+        /* We need to load the function first */
+        void* handle = dlopen("libSystem.B.dylib", RTLD_LAZY);
+        if (!handle)
+            return nil;
+        proc_pidinfo = dlsym(handle, "proc_pidinfo");
+        if (!proc_pidinfo)
+            return nil;
+    }
+
+    struct proc_vnodepathinfo vpi;
+    int ret;
+    /* This only works if the child process is owned by our uid */
+    ret = proc_pidinfo(PID, PROC_PIDVNODEPATHINFO, 0, &vpi, sizeof(vpi));
+    if (ret <= 0) {
+        /* An error occured */
+        return nil;
+    } else if (ret != sizeof(vpi)) {
+        /* Now this is very bad... */
+        return nil;
+    } else {
+        /* All is good */
+        NSString *ret = [NSString stringWithUTF8String:vpi.pvi_cdir.vip_path];
+        return ret;
+    }
 }
 
 @end
